fixed projects from overflowing

--- a/style.scss
+++ b/style.scss
@@ -160,6 +160,7 @@ a {
     flex-direction: column;
     position: relative;
     height: auto;
+    overflow-x: hidden;
     h2 {
         display: flex;
         justify-content: center;
